--- a/Moadel/index.html
+++ b/Moadel/index.html
@@ -46,6 +46,7 @@
     grades.forEach((val, index) => {
       let total = 0;
       let n = 0;
+      let grade = val;
       for (grade in val) {
         total += val[grade];
         n++;
